adguard/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
  labels:
    name: adguard
