adguard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
  namespace: adguard
spec:
  type: LoadBalancer
  # externalIPs: 
  # - 192.168.1.170
  selector:
    appname: adguard
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: initial-setup
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http-access
  - protocol: UDP
    port: 53
    targetPort: 53
    name: dns-port
