adguard/adguard.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
  labels:
    name: adguard

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-service
            port:
              number: 80
              number: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-dns
  namespace: adguard
spec:
  replicas: 1
  revisionHistoryLimit: 0 # no extra replica sets!
  selector:
    matchLabels:
      appname: adguard
  template:
    metadata:
      labels:
        appname: adguard
    spec:
      volumes:  # paths on the host node
      - name: adguard-work
        hostPath:
          path: /lab/pri/adguard/work
          type: DirectoryOrCreate
      - name: adguard-conf
        hostPath:
          path: /lab/pri/adguard/conf
          type: DirectoryOrCreate
      containers:
      - name: adguard-container
        image: adguard/adguardhome:latest
        # env:
        # - name: AGH_CONFIG
        #   valueFrom:
        #     configMapKeyRef:
        #       name: adguard-config
        #       key: AdGuardHome.yaml
        volumeMounts:
          - name: adguard-work
            mountPath: /opt/adguardhome/work
          - name: adguard-conf
            mountPath: /opt/adguardhome/conf

---
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    appname: adguard
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: initial-setup
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http-access
  - protocol: UDP
    port: 53
    targetPort: 53
    name: dns-port
