adguard/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-adguard
  namespace: adguard
spec:
  routes:
    - match: PathPrefix(`/adguard`)
      kind: Rule
      services:
        - name: adguard-service
          kind: TraefikService
      # Host(`traefik.example.com`)
      #match:
